--- a/hello-react/src/SassComponent.scss
+++ b/hello-react/src/SassComponent.scss
@@ -2,8 +2,13 @@
 
 .SassComponent{
    display: flex;
+   background: $oc-gray-2;
+   @include media('<768px'){
+    background: $oc-gray-9;
+   }
+
    .box{
-    background: red;
+  
     cursor : pointer;
     transition : all 0.3s ease-in;
     &.red{
